# VLASH-Forge

./: .dockerignore  .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  assignment.txt  deepspeed_config.yaml  docker-compose.yaml  docker-entrypoint.sh  huggingface.txt  index.html  mkdocs.yml  pyproject.toml  singularity.def  sitemap.xml  slides_prompt.json
.github/workflows/: docs.yml
IMPLEMENTATION_PLAN/: index.html
backends/: index.html
benchmarks/: __init__.py  benchmark_config.py  benchmark_inference_latency.py
config/: index.html
configs/: deepspeed_config.yaml  fsdp_config.yaml
docs/: backends.md  config.md  env-vars.md  gpu.md  index.md  quickstart.md  running.md  setup.md  storage.md
docs/stylesheets/: extra.css
env-vars/: index.html
examples/benchmarks/: inference_latency.yaml
examples/inference/: async.yaml  sync.yaml
examples/train/pi0/: async.yaml  async_lora.yaml  sync.yaml
examples/train/pi05/: async.yaml  async_lora.yaml  cloud.yaml  cloud_full.yaml  mytrain.yaml  mytrain_piper_test3.yaml  sync.yaml
gpu/: index.html
k8s/: training-job.yaml
presentation_script/: index.html
quickstart/: index.html
running/: index.html
scripts/: train.sh  train_pbs.pbs  train_slurm.sbatch
search/: search_index.json
setup/: index.html
storage/: index.html
tests/: test_paligemma_storage.py  test_tie.py
vlash/: __init__.py  cli.py  run.py  train.py
vlash/configs/: __init__.py  run_config.py  train_config.py
vlash/datasets/: __init__.py  compat.py  vlash_dataset.py
vlash/layers/: attention.py  linear.py  rope.py
vlash/lora/: __init__.py  apply.py  checkpoint.py  logging.py  qlora.py
vlash/policies/: __init__.py  factory.py  normalize.py
vlash/policies/pi0/: __init__.py  configuration_pi0.py  modeling_pi0.py  utils.py
vlash/policies/pi05/: __init__.py  configuration_pi05.py  modeling_pi05.py  utils.py
