
# ==========================================
# PIXI USAGE NOTES
# ==========================================
#
# This project uses Pixi (https://pixi.sh/) for environment and task management.
#
# - To install all dependencies: pixi install
# - To enter the environment shell: pixi shell
# - To run a task: pixi run <task>
#
# You do NOT need to use pip or conda directly. Pixi handles all dependencies and environments.
#
# See README.md and https://pixi.sh/docs/ for more info.

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "vlash"
version = "0.1.0"
description = "Real-Time VLAs via Future-state-aware Asynchronous Inference."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]






[tool.setuptools.packages.find]
exclude = ["assets*", "benchmarks*", "docs", "dist*", "playground*", "scripts*", "tests*"]

# ==========================================
# PIXI CONFIGURATION
# ==========================================
[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.system-requirements]
# Uncomment and set if you want to require a specific CUDA version
# cuda = "12.8"

[tool.pixi.dependencies]
python = "3.10.*"
ffmpeg = "7.1.1"
torch = "2.2.1"
torchvision = "0.22.0"
torchcodec = "*"
setuptools = "80.10.2"
fsspec = "2025.9.0"
lerobot = "0.4.1"
peft = "0.18.0"
bitsandbytes = "0.48.2"
flask = ">=3.1.2"
reachy2_sdk = "*"

[tool.pixi.pypi-dependencies]
transformers = { url = "https://github.com/huggingface/transformers.git", editable = true }

[tool.pixi.tasks]
train = { cmd = "vlash train examples/train/pi05/async.yaml" }
run = { cmd = "vlash run examples/inference/async.yaml" }

[tool.pixi.scripts]
vlash = "python -m vlash.cli"

[tool.pixi.urls]
Homepage = "https://github.com/mit-han-lab/vlash"
Repository = "https://github.com/mit-han-lab/vlash"
