[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlash"
version = "0.1.0"
description = "Real-Time VLAs via Future-state-aware Asynchronous Inference."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "lerobot[smolvla]==0.4.1",
    "transformers @ git+https://github.com/huggingface/transformers.git@dcddb970176382c0fcf4521b0c0e6fc15894dfe0",
    "peft==0.18.0",
    "bitsandbytes==0.48.2",
    "deepspeed>=0.16.0,<0.17",
    "torchcodec>=0.5,<0.6",
]

[project.optional-dependencies]
robot = ["reachy2_sdk"]

[project.urls]
Homepage = "https://github.com/mit-han-lab/vlash"
Repository = "https://github.com/mit-han-lab/vlash"

[project.scripts]
vlash = "vlash.cli:main"

[tool.setuptools]
packages = ["vlash", "vlash.configs", "vlash.datasets", "benchmarks"]
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
# cuda-toolkit is provided by the nvcr.io/nvidia/cuda base image — omitting it
# here prevents pixi from pulling in the conda cross-compiler whose bundled
# sysroot lacks the kernel input codes that evdev needs to compile.

[tool.pixi.pypi-dependencies]
vlash = { path = ".", editable = true }

[tool.pixi.tasks]
